# node-webengine-hosting

./: .gitignore  .npmignore  CMakeLists.txt  README.md  binding.gyp  cmake-install.bat  dev.bat  package-lock.json  package.json  tsconfig.json
.tools/: NodeJS.cmake  cli.js  scripts-0.0.2.tgz  targets_setting.cmake  utils.cmake
.tools/packaging/: copy-file.js
.tools/projects/: sources.cmake  targets.cmake
.tools/typescript/: index.cmake  make_package_json.js
Hosting/node_webagent_hosting/: CMakeLists.txt  package-lock.json  package.json  tsconfig.json
Hosting/oswin_webagent_hosting/: CMakeLists.txt  main.cpp
Hosting/webagent_hosting/: CMakeLists.txt  LICENSE
include/: engine-attributs.h  engine-events.h  engine-interfaces.h  webx-attributs.h  webx-datagrams.h  webx-events.h  webx-releasables.h  webx-value.h  webx.cpp  webx.h
node_webagent_host/: CMakeLists.txt  package-lock.json  package.json  tsconfig.json
node_webagent_host/scripts/: launch-monitor.js
node_webagent_host/src/: index.ts
node_webagent_host/src_addon/: WebxEngine-js.cc  WebxSession.cc  WebxSessionObjectWrap.h  v8helper.h
oswin_webagent_host/: CMakeLists.txt  main.cpp
scripts/: build.js  dts-bundle-index.js  launch-monitor.js  launch.js
src/: express-ws-routes.js  index.ts
src/__test__/: WebxEngine.ts  WebxRouter.ts  index.ts
src/common/: fs2.js  index.js  index.ts
src/lib/: WebsocketResponse.js  WebsocketResponse.ts  WebxEngine.js  WebxEngine.ts  WebxEngineRemote.js  index.js  remote_child.js  server_child.js
src_cpp/: WebxEngine-js.cc  WebxEngine.cc  WebxEngine.h  WebxEngineHost-js.cc  WebxEngineHost.cc  WebxEngineHost.h  WebxHttpTransaction-js.cc  WebxHttpTransaction.cc  WebxHttpTransaction.h  WebxSession-js.cc  WebxSession.cc  WebxSession.h  WebxSessionHost.h  WebxSessionObjectWrap.cc  WebxSessionObjectWrap.h  WebxWebSocketStream-js.cc  WebxWebSocketStream.cc  WebxWebSocketStream.h  addon.cc  engine-interfaces-impl.h  engine-interfaces.h  spinlock.cpp  v8helper.h
test_dll/: test_dll.sln
test_dll/test_dll/: dllmain.cpp  test_dll.cpp  test_dll.vcxproj  test_dll.vcxproj.filters
webagent_hosting/: CMakeLists.txt
webagent_hosting/src/: webx.cpp
(+18 files in other folders)
